--- a/index.html
+++ b/index.html
@@ -5,40 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat WebSocket</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
         .chat-container {
             display: flex;
-            justify-content: space-around;
+            gap: 20px;
         }
         .chat-box {
-            width: 300px;
+            width: 350px;
             border: 1px solid #ccc;
+            border-radius: 8px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            padding: 20px;
+        }
+        .chat-header {
+            background-color: #6200ea;
+            color: #fff;
             padding: 10px;
+            text-align: center;
+            border-radius: 8px 8px 0 0;
+        }
+        .input-field {
+            width: calc(100% - 20px);
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            outline: none;
+        }
+        .button {
+            width: 100%;
+            padding: 10px;
+            background-color: #6200ea;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #3700b3;
         }
         .chat {
             height: 300px;
-            border: 1px solid #ccc;
             overflow-y: scroll;
+            padding: 10px;
+            border-bottom: 1px solid #ccc;
+        }
+        .message {
             margin-bottom: 10px;
         }
-        .message-input {
-            width: 240px;
+        .message strong {
+            color: #6200ea;
+        }
+        .message-time {
+            font-size: 0.8em;
+            color: #888;
         }
     </style>
 </head>
 <body>
     <div class="chat-container">
         <div class="chat-box">
-            <h2>Usuário 1</h2>
+            <div class="chat-header">Usuário 1</div>
             <div id="chat1" class="chat"></div>
-            <input type="text" id="message1" class="message-input" placeholder="Digite sua mensagem...">
-            <button onclick="sendMessage(ws1, 'message1')">Enviar</button>
+            <input type="text" id="message1" class="input-field" placeholder="Digite sua mensagem...">
+            <button class="button" onclick="sendMessage(ws1, 'message1')">Enviar</button>
         </div>
 
         <div class="chat-box">
-            <h2>Usuário 2</h2>
+            <div class="chat-header">Usuário 2</div>
             <div id="chat2" class="chat"></div>
-            <input type="text" id="message2" class="message-input" placeholder="Digite sua mensagem...">
-            <button onclick="sendMessage(ws2, 'message2')">Enviar</button>
+            <input type="text" id="message2" class="input-field" placeholder="Digite sua mensagem...">
+            <button class="button" onclick="sendMessage(ws2, 'message2')">Enviar</button>
         </div>
     </div>
 
